[package]
name = "integrators"
version = "0.1.0"
edition = "2024"
authors = ["Tim"]
description = "Various numerical integrators."
readme = "README.md"
licence = "AGPL-3.0-or-later"

[dependencies]
itertools = "0.13.0"
math-macros = { git = "https://github.com/DynaClim/math-macros.git" }
serde = {version = "1.0.215", features = ["derive"]}
thiserror = "2.0.6"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"
#missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
